Hid Fields that shouldn't display for ipv4/6, fixed navcollapse width

--- a/infrastructureinventoryproject/infrastructureinventoryapp/static/style.css
+++ b/infrastructureinventoryproject/infrastructureinventoryapp/static/style.css
@@ -70,9 +70,9 @@ body {
     }
 }
 
-/*Nav bar collapse when window is less than 1255px wide*/
+/*Nav bar collapse when window is less than 1051px wide*/
 
-@media (max-width: 817px) {
+@media (max-width: 1051px) {
     .navbar-header {
         float: none;
     }
